package behavioral.observer.bt2;

public interface IActivity {
    void hienThi(Button button);
}
